docs/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-api
  labels:
    app: tenant-api
spec:
  externalTrafficPolicy: Local
  type: NodePort
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: tenant-api
