docs/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-api
  labels:
    app: tenant-api
  annotations:
    ingress.citrix.com/frontend-ip: 212.103.78.69
    ingress.citrix.com/insecure-termination: "redirect"
    ingress.citrix.com/secure-backend: "True"
    kubernetes.io/ingress.class: "citrix"
    cert-manager.io/cluster-issuer: letsencrypt-staging-natron
spec:
  rules:
  - host: tenant-api.natron.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tenant-api
            port:
              name: http
  tls:
  - hosts:
    - tenant-api.natron.io
    secretName: tenant-api-natron-io-cert
